# pytest-capquery

./: .pre-commit-config.yaml  .prettierignore  .prettierrc  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/: v1.diff
src/pytest_capquery/: asserter.py  formatter.py  models.py  plugin.py  snapshot.py
tests/: conftest.py  models.py  test_core_assertions.py  test_orm.py  test_plugin.py
tests/e2e/: conftest.py  test_cross_dialect_support.py  test_mysql.py  test_postgres.py  test_sqlite.py
tests/e2e/mysql/: conftest.py  test_assert_executed_queries.py  test_snapshot.py
tests/e2e/mysql/__capquery_snapshots__/test_snapshot/: test_insert_and_select_snapshot.sql
tests/e2e/postgres/: conftest.py  test_assert_executed_queries.py  test_snapshot.py
tests/e2e/postgres/__capquery_snapshots__/test_snapshot/: test_insert_and_select_snapshot.sql
tests/e2e/sqlite/: test_assert_executed_queries.py  test_snapshot.py
tests/e2e/sqlite/__capquery_snapshots__/test_snapshot/: test_insert_and_select_snapshot.sql
tests/unit/: conftest.py  test_asserter.py  test_assertion_failures.py  test_capture_context.py  test_core_assertions.py  test_formatter.py  test_models.py  test_orm.py  test_plugin.py  test_query_formatting.py  test_snapshot.py  test_snapshot_internals.py  test_snapshot_usage.py  test_transaction_boundaries.py
tests/unit/__capquery_snapshots__/test_snapshot/: test_user_business_logic.sql  test_user_multiple_phases.sql
