[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pytest-capquery"
version = "0.2.0"
description = "A pytest fixture for high-precision SQL testing in SQLAlchemy."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest",
    "sqlalchemy",
    "sqlparse",
    "sqlalchemy-capture-sql"
]

[project.entry-points.pytest11]
capquery = "pytest_capquery.plugin"

[project.optional-dependencies]
test = [
    "cryptography",
    "pre-commit",
    "psycopg2-binary",
    "pymysql",
    "pytest-cov",
    "pytest-watcher",
    "pytest-xdist"
]

[tool.coverage.run]
source = ["src/pytest_capquery"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
